--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
     width: 100vw;
     position: absolute;
     background-repeat: no-repeat;
-    background-color: #2a2626;
+    background-color: #181717;
   }
   .mainContainer{
     margin: 0;
@@ -78,7 +78,7 @@
     padding-bottom: 3pxrem;
     margin: auto;
     position: relative;
-    background-color: #2a2626;
+    background-color: #181717;
   } 
   #p1 {
     font-size: 20px;
@@ -98,6 +98,15 @@
     left: 0;
     position: relative;
     margin: auto;
-    padding-top: 3px;
+    padding-top: 1px;
   
+  }
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100% 100%;
   }
