--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -48,12 +49,14 @@
 {
     align-self: center;
     position: relative;
-    background-color: #d81af5b2;
+    background-color: #d81af59b;
     color: white;
     width: 20rem;
     height: 3rem;
     border-radius: 30px;
-    font-size: 20px;
+    font-size: 25px;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 800;
     /* border: 1px solid red; */
 
 }
@@ -78,7 +81,6 @@
     left: 0;
     bottom: 0;
     top: 0;
-    padding-bottom: 3px;
     margin: auto;
     position: relative;
     background-color: #181717;
@@ -86,6 +88,10 @@
   #p1 {
     font-size: 20px;
     color: white;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 800;
+    bottom: 0;
+    position: relative;
   }
   #icons {
     font-size: 30px;
@@ -97,12 +103,6 @@
   }
   #mediaIcons{
     width: 100%;
-    right: 0;
-    left: 0;
-    position: relative;
-    margin: auto;
-    padding-top: 1px;
-  
   }
   #particles-js {
     position: absolute;
